WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54672
'ex' coordinates fail, when SVGFont doesn't provide an explicit xHeight attribute
https://bugs.webkit.org/show_bug.cgi?id=54672
Summary
'ex' coordinates fail, when SVGFont doesn't provide an explicit xHeight attri...
Nikolas Zimmermann
Reported
2011-02-17 10:19:22 PST
'ex' coordinates fail, when SVGFont doesn't provide an explicit xHeight attribute. LayoutTests/svg/W3C-SVG-1.1/coords-units-03-b.svg shows 'ex' works fine for true type fonts, but the SVG 1.1 2nd Edition test coords-units-03-b.svg, which uses SVGFonts, fails. Measure 'x' if no x-height attribute is given, if even there's no x-glyph around, just guess it using 2 * ascent /3 (similar to how mac does it for ttf fonts).
Attachments
Patch
(74.11 KB, patch)
2011-02-17 10:47 PST
,
Nikolas Zimmermann
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2011-02-17 10:47:32 PST
Created
attachment 82831
[details]
Patch
Nikolas Zimmermann
Comment 2
2011-02-17 10:58:19 PST
Landed in
r78844
.
WebKit Review Bot
Comment 3
2011-02-17 11:32:15 PST
http://trac.webkit.org/changeset/78844
might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: svg/W3C-SVG-1.1-SE/types-dom-01-b.svg
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug