2011-02-17  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        'ex' coordinates fail, when SVGFont doesn't provide an explicit xHeight attribute
        https://bugs.webkit.org/show_bug.cgi?id=54672

        Measure the xHeight from the 'x' glyph of a SVGFont, if the font itself doesn't explicitely specify an x-height attribute.
        Fixes the modern version of SVG 1.1 2nd Edition coords-units-03-b.svg.

        Test: svg/W3C-SVG-1.1-SE/coords-units-03-b.svg

        * platform/graphics/SimpleFontData.cpp:
        (WebCore::SimpleFontData::SimpleFontData):

2011-02-17  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        'ex' coordinates fail, when SVGFont doesn't provide an explicit xHeight attribute
        https://bugs.webkit.org/show_bug.cgi?id=54672

        Add new testcase from SVG 1.1 2nd Edition covering exs support + SVGFonts.

        * platform/mac/svg/W3C-SVG-1.1-SE/coords-units-03-b-expected.checksum: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/coords-units-03-b-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/coords-units-03-b-expected.txt: Added.
        * svg/W3C-SVG-1.1-SE/coords-units-03-b.svg: Added.


Canonical link: https://commits.webkit.org/68809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78844 268f45cc-cd09-0410-ab3c-d52691b4dbfc